--- a/import-activity/ui/main.reel/main.css
+++ b/import-activity/ui/main.reel/main.css
@@ -5,6 +5,7 @@ body {
 
 .Importer {
     display: -webkit-flex;
+    -webkit-flex-direction: column;
     height: 100%;
     width: 100%;
     padding: 14px;
@@ -15,6 +16,7 @@ body {
 }
 
 .Activities {
+    -webkit-flex: 1;
     overflow: auto;
     width: 100%;
     margin: 0;
@@ -54,4 +56,10 @@ body {
 
 .Activity-list-item:active {
     background: hsl(0, 0%, 90%);
+}
+
+.footer {
+    display: block;
+    font-size: 12px;
+    color: hsl(0, 0%, 70%);
 }
