--- a/import-activity/ui/main.reel/main.css
+++ b/import-activity/ui/main.reel/main.css
@@ -4,11 +4,11 @@ body {
 }
 
 .Importer {
+    position: relative;
     display: -webkit-flex;
-    -webkit-flex-direction: column;
     height: 100%;
     width: 100%;
-    padding: 14px;
+    padding: 14px 14px 44px 14px;
     text-shadow: 0 1px 0 hsla(0,0%,100%,.5);
     background: hsl(0,0%,95%) -webkit-radial-gradient( hsl(0,0%,98%), hsl(0,0%,90%) );
     -webkit-user-select: none;
@@ -59,7 +59,10 @@ body {
 }
 
 .footer {
-    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 14px;
     font-size: 12px;
     color: hsl(0, 0%, 70%);
 }
