--- a/pdf-converter/templates/page.xhtml
+++ b/pdf-converter/templates/page.xhtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 
 <html xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
@@ -7,6 +7,9 @@
         <meta charset="utf-8"/>
 		<title>{{page-title}}</title>
         {{page-headers}}
+        <style type="text/css">
+            {{page-style}}
+        </style>
 	</head>
     <body style="margin: 0">
         <div style="position: relative; overflow: hidden; width: {{page-width}}px; height: {{page-height}}px">
