--- a/pdf-converter/templates/epub3/OEBPS/nav.xhtml
+++ b/pdf-converter/templates/epub3/OEBPS/nav.xhtml
@@ -5,25 +5,33 @@
 		<!--link rel="stylesheet" type="text/css" href="template.css"/-->
 	</head>
 	<body>
+        <nav epub:type="toc" id="toc">
+            <h2>Table of contents</h2>
+            {{toc}}
+            <!--ol>
+                <li>
+                    <a href="pages/1.xhtml">First page</a>
+                </li>
+                <li>
+                    <a href="pages/2.xhtml">Second page</a>
+                </li>
+            </ol-->
+        </nav>
 
-		<nav epub:type="toc" id="toc">
-            <h2>Contents</h2>
-		<ol>
-            <li>
-               <a href="pages/1.xhtml">First page</a>
-             </li>
-        </ol>
- 	</nav>
-
-		<nav epub:type="landmarks" id="guide">
+        <!--nav epub:type="landmarks" id="guide">
             <h2>Guide</h2>
             <ol>
-               <li><a epub:type="bodymatter" href="pages/1.xhtml">Start</a></li>
+                <li><a epub:type="bodymatter" href="pages/1.xhtml">Start</a></li>
             </ol>
-        </nav>
-	<nav epub:type="page-list">
-		<ol>
-		    <li><a href="pages/1.xhtml">1</a></li>
-        </ol>
-	</nav></body>
+        </nav-->
+
+        <!--nav epub:type="page-list">
+            <ol>
+                <li><a href="pages/1.xhtml">1</a></li>
+                <li><a href="pages/2.xhtml">2</a></li>
+                <li><a href="pages/3.xhtml">3</a></li>
+                <li><a href="pages/4.xhtml">4</a></li>
+            </ol>
+        </nav-->
+    </body>
 </html>
