--- a/import-activity/ui/main.reel/main.css
+++ b/import-activity/ui/main.reel/main.css
@@ -54,11 +54,38 @@ body {
     background: hsl(0, 0%, 97%);
 }
 
+.Activity-list--clear {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    min-width: 16px !important;
+    right: 14px;
+
+    background: url('../../assets/images/clear.svg') no-repeat;
+    background-size:16px 16px;
+    background-repeat:no-repeat;
+    background-position:left center;
+
+    opacity: 0.3;
+    border: none !important;
+}
+
+.Activity-list--clear:hover {
+    background-color: transparent !important;
+    opacity: 0.7;
+}
+
+.Activity-list--clear.active {
+    background-color: transparent !important;
+    opacity: 1;
+}
+
 .footer {
     position: absolute;
+    width: 100%;
     left: 0;
     bottom: 0;
-    margin: 14px;
+    padding: 14px;
     font-size: 12px;
     color: hsl(0, 0%, 70%);
 }
