Generate toc.ncx content

--- a/pdf-converter/templates/epub3/OEBPS/nav.xhtml
+++ b/pdf-converter/templates/epub3/OEBPS/nav.xhtml
@@ -6,7 +6,7 @@
 	<body>
         <nav epub:type="toc" id="toc">
             <h2>Table of contents</h2>
-            {{toc}}
+            {{nav}}
         </nav>
     </body>
 </html>
