Moves loading spinner down a bit

--- a/assets/styles/bootstrapping.css
+++ b/assets/styles/bootstrapping.css
@@ -17,7 +17,7 @@
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    margin: 6px 0 0 1px;
+    margin: 130px 0 0 0;
     background: url(../img/icon.svg) no-repeat center center;
     background-size: 100%;
     -webkit-animation: spin 3.6s linear infinite;
