--- a/import-activity/ui/activity-list-item.reel/activity-list-item.css
+++ b/import-activity/ui/activity-list-item.reel/activity-list-item.css
@@ -8,7 +8,7 @@
     -webkit-box-orient: vertical;
     -webkit-box-pack: center;
     -webkit-box-align: left;
-    padding: 4px 8px;
+    padding: 4px 8px 4px 12px;
 }
 .Activity-item--center {
     display: -webkit-box;
@@ -25,7 +25,7 @@
     -webkit-box-orient: vertical;
     -webkit-box-pack: center;
     -webkit-box-align: left;
-    padding: 4px 8px;
+    padding: 4px 12px 4px 8px;
 }
 .Activity-item--icon {
     width: 48px;
