--- a/import-activity/ui/main.reel/main.css
+++ b/import-activity/ui/main.reel/main.css
@@ -29,7 +29,7 @@ body {
     position: relative;
     width: 100%;
     margin: 0;
-    padding: 4px 8px;
+    padding: 0;
     list-style: none;
     background-color: hsl(0, 0%, 95%);
 }
