Refactor page viewer

--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -63,7 +63,7 @@ body {
     padding: 4px 0px 16px 0px;
 }
 
-.pageView {
+.spreadView {
     position: relative;
     -webkit-flex: 1;
     padding: 0;
