--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -24,14 +24,66 @@ body {
     font-size: 10pt;
 }
 
-.main > header {
-    padding: 5px;
-    height: 32px;
+/* Toolbar -------------------------------------- */
+
+.Toolbar {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 8px;
     background-color: #474747;
     background-image: linear-gradient(hsla(0,0%,32%,.99), hsla(0,0%,27%,.95));
     box-shadow: inset 1px 0 0 hsla(0,0%,100%,.08), inset 0 1px 1px hsla(0,0%,0%,.15), inset 0 -1px 0 hsla(0,0%,100%,.05), 0 1px 0 hsla(0,0%,0%,.15), 0 1px 1px hsla(0,0%,0%,.1);
     overflow: hidden;
 }
+
+.Toolbar-group {
+    display: flex;
+    align-items: center;
+}
+
+.Button--viewmode {
+    margin: 0 10px 0 0;
+    width: 120px;
+}
+
+/* Overlay */
+
+.Overlay {
+    margin: 0 10px;
+}
+
+.Overlay-icon {
+    height: 24px;
+    vertical-align:middle;
+}
+
+.Overlay-range {
+    position: relative;
+    top: 3px;
+}
+
+.Overlay-autoOpacity {
+    
+}
+
+
+/* Copyright */
+
+.Copyright {
+    display: flex;
+}
+
+.Copyright-title {
+    margin: 0 1em 0 0;
+}
+
+.Copyright-saveButton {
+    margin: 0 0 0 10px;
+}
+
+
+/* Content -------------------------------------- */
 
 .main > .content {
     display: -webkit-flex;
@@ -72,28 +124,4 @@ body {
     margin: 20px 40px;
 }
 
-.main-inspector {
-    display: -webkit-flex;
-    -webkit-align-items: center;
-}
-
-.main-inspector-title {
-    margin: 0;
-    padding: 0 1em 0;
-    font-size: 10pt;
-}
-
-.Action-button {
-    width: 120px;
-}
-
-.overlay-icon {
-    height: 24px;
-    vertical-align:middle;
-}
-
-.overlay-range {
-    position: relative;
-    top: 3px;
-}
 
