--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -42,10 +42,41 @@ body {
     align-items: center;
 }
 
-.Button--viewmode {
+/* Buttons */
+
+.Toolbar-button.matte-Button {
+    color: hsla(0,0%,100%,.6);
+    text-shadow: 0 1px 0 hsla(0,0%,0%,.2);
+    border-color: hsl(0,0%,15%);
+    background-image: -webkit-linear-gradient(top, hsl(0,0%,30%), hsl(0,0%,24%) );
+    box-shadow: inset 0 1px 1px hsla(0,0%,100%,.1), inset 0 -1px 1px hsla(0,0%,0%,.06), 0 1px 0 hsla(0,0%,100%,.1);
+}
+
+.Toolbar-button.matte-Button.active {
+    color: hsla(0,0%,100%,.3);
+    border-color: hsl(0,0%,15%);
+    background-image: -webkit-linear-gradient(top, hsl(0,0%,24%), hsl(0,0%,18%) );
+    box-shadow: inset 0 1px 3px hsla(0,0%,0%,.3), 0 1px 0 hsla(0,0%,100%,.1);
+}
+
+/* Action */ 
+
+.Toolbar-button--action.matte-Button {
+    color: hsl(170,80%,90%);
+    border-color: hsl(170,80%,10%);
+    background-image: -webkit-linear-gradient(top, hsl(160,80%,42%), hsl(160,80%,32%) );
+}
+
+.Toolbar-button--action.matte-Button.active {
+    color: hsl(170,80%,80%);
+    background-image: -webkit-linear-gradient(top, hsl(160,80%,32%), hsl(160,80%,22%) );
+}
+
+.Toolbar-button--viewmode {
     margin: 0 10px 0 0;
     width: 120px;
 }
+
 
 /* Overlay */
 
