--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -31,6 +31,7 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 8px;
+    color: hsl(0,0%,70%);
     background-color: #474747;
     background-image: linear-gradient(hsla(0,0%,32%,.99), hsla(0,0%,27%,.95));
     box-shadow: inset 1px 0 0 hsla(0,0%,100%,.08), inset 0 1px 1px hsla(0,0%,0%,.15), inset 0 -1px 0 hsla(0,0%,100%,.05), 0 1px 0 hsla(0,0%,0%,.15), 0 1px 1px hsla(0,0%,0%,.1);
@@ -122,7 +123,7 @@ body {
 }
 
 
-/* Copyright */
+/* Copyright -------------------------------------- */
 
 .Copyright {
     display: flex;
