Auto-overlay: replace fading effect by blinking - invert range (PDF on left) - reduce width of the slider

--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -92,6 +92,7 @@ body {
 }
 
 .Overlay-range {
+    width: 75px;
     vertical-align: middle;
     border-radius: 3px;
     border-color: hsl(0,0%,15%);
