Added DOM layer, regroup SVG text per words when possible

--- a/pdf-converter/templates/page.xhtml
+++ b/pdf-converter/templates/page.xhtml
@@ -14,7 +14,7 @@
         </style>
 	</head>
     <body>
-        <div class="page" style="width: {{page-width}}px; height: {{page-height}}px">
+        <div class="page {{page-class}}" style="width: {{page-width}}px; height: {{page-height}}px">
             {{page-content}}
         </div>
     </body>
