--- a/pdf-converter/templates/epub3/OEBPS/assets/style.css
+++ b/pdf-converter/templates/epub3/OEBPS/assets/style.css
@@ -1,10 +1,11 @@
 
 body {
     margin: 0;
+    padding: 0;
 }
 
 div.page {
-    position: relative;
+    position: absolute;
     overflow: hidden;
     background-color: white;
 
@@ -39,6 +40,8 @@ div.page span, div.page img {
 
 div.page svg {
     position: absolute;
+    top: 0;
+    left: 0;
 
     transform-origin: 0 0;
     -webkit-transform-origin: 0 0;
@@ -52,4 +55,41 @@ div.page text, div.page tspan, div.page image {
     -webkit-user-select: text;
     -moz-user-select: text;
     -ms-user-select: text
+}
+
+
+/* DOM overlay */
+#textOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    transform-origin: 0px 0px;
+    -webkit-transform-origin: 0px 0px;
+    -moz-transform-origin: 0px 0px;
+    -ms-transform-origin: 0px 0px;
+}
+
+#textOverlay div {
+    position: absolute;
+    white-space: nowrap;
+    overflow: hidden;
+
+    transform-origin: 0px 0px;
+    -webkit-transform-origin: 0px 0px;
+    -moz-transform-origin: 0px 0px;
+    -ms-transform-origin: 0px 0px;
+}
+
+#textOverlay span {
+    position: relative
+}
+
+/* overlay types */
+.overlayDomText svg text {
+    display: none !important;
+}
+
+.overlaySvgText div span {
+    color: transparent !important;
 }
