--- a/pdf-converter/templates/epub3/OEBPS/assets/style.css
+++ b/pdf-converter/templates/epub3/OEBPS/assets/style.css
@@ -93,3 +93,9 @@ div.page text, div.page tspan, div.page image {
 .overlaySvgText div span {
     color: transparent !important;
 }
+
+
+/* Read along highlighting */
+.-epub-media-overlay-active {
+    background-color: #ffb;
+}
