making it transparent since we will be drawing ontop of the page
note: we CANT use text color, the text is not in the right spot so it has to be a background color.

--- a/pdf-converter/templates/epub3/OEBPS/assets/style.css
+++ b/pdf-converter/templates/epub3/OEBPS/assets/style.css
@@ -98,4 +98,5 @@ div.page text, div.page tspan, div.page image {
 /* Read along highlighting */
 .-epub-media-overlay-active {
     background-color: #ffb;
+    opacity: .3;
 }
