for PLU-219 added user interface for visualizing read along
based on the copyright method, where it uses a channel to ask the .xhtml if it has read along...

--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -124,6 +124,20 @@ body {
 }
 
 
+/* ReadAlong -------------------------------------- */
+
+.ReadAlong {
+    display: flex;
+}
+
+.ReadAlong-icon {
+    height: 28px;
+    margin: 0 10px 0 10px;
+    vertical-align: middle;
+}
+
+
+
 /* Copyright -------------------------------------- */
 
 .Copyright {
