faking read along with css highlighting on a timeout, and playing audio when the page loads
TODO need to connect the play button to the read aloud and try to figure out how ot have a read-write connection in the iframe

--- a/ui/read-along-debug-view.reel/reading-order-visualization.css
+++ b/ui/read-along-debug-view.reel/reading-order-visualization.css
@@ -1,7 +1,7 @@
 
 #textOverlay span {
     position: relative;
-    background-color: #ff5;
+    background-color: #5ff;
     color: #f00 !important; /* the text is way off, we can't use text color */
     opacity: .3;
 }
