--- a/ui/read-along-debug-view.reel/read-along-debug-view.css
+++ b/ui/read-along-debug-view.reel/read-along-debug-view.css
@@ -17,12 +17,23 @@
 
 .ReadAlongDebugViewPages-debug {
     position: absolute;
-    left: 100px;
-    top: 150px;
+    right: 0px;
+    top: 0px;
     border: 2px;
     margin: 2em;
     padding: 2em;
     z-index: 1000;
-    background: grey;
     opacity: .8;
+}
+
+
+.ReadAlong {
+    display: flex;
+}
+
+.ReadAlongDebugViewPages-icon {
+    height: 25px;
+    margin: 2px 10px 4px 10px;
+    vertical-align: middle;
+    opacity: .5;
 }
