adding smil to template

--- a/pdf-converter/templates/page.xhtml
+++ b/pdf-converter/templates/page.xhtml
@@ -14,8 +14,11 @@
         </style>
 	</head>
     <body>
-        <div class="page {{page-class}}" style="width: {{page-width}}px; height: {{page-height}}px">
+        <div epub:type="bodymatter part" class="page {{page-class}}" style="width: {{page-width}}px; height: {{page-height}}px">
             {{page-content}}
         </div>
+        <p>
+            <span epub:type="pagebreak" id="page23" title="23"></span>
+        <p>
     </body>
 </html>
