--- a/ui/read-along-debug-view.reel/read-along-debug-view.css
+++ b/ui/read-along-debug-view.reel/read-along-debug-view.css
@@ -28,13 +28,32 @@
     display: flex;
 }
 
-.ReadAlongDebugViewPages-icon {
-    height: 25px;
-    margin: 2px 10px 4px 10px;
-    vertical-align: middle;
-    opacity: .5;
+.ReadAlongDebugViewPages-button.matte-Button {
+    height: auto;
+    margin: 0;
+    padding: 1em;
+    font-size: 13px;
+    line-height: 1;
+    color: #fff;
+    border-radius: 2.5em;
+    border: none;
+    background: hsl(0,0%,10%) linear-gradient( hsla(0,0%,100%,.1), hsla(0,0%,100%,0) );
 }
 
-.disabled{
+.ReadAlongDebugViewPages-button.matte-Button:hover {
+    color: #fff;
+    background-color: hsl(0,0%,20%);
+}
+
+.ReadAlongDebugViewPages-button.matte-Button:active {
+    background: hsl(0,0%,0%);
+}
+
+.ReadAlongDebugViewPages-icon {
+    margin: 0;
+    vertical-align: middle;
+}
+
+.disabled {
     opacity: .0;
 }
